Fixed eror with spacing for the input fields

--- a/CottageWars/CottageWars/bootstrap/css/Site.css
+++ b/CottageWars/CottageWars/bootstrap/css/Site.css
@@ -27,7 +27,7 @@ input[type="password"],
 input[type="email"],
 input[type="tel"],
 input[type="select"] {
-    max-width: 280px;
+    
 }
 
 /* Responsive: Portrait tablets and up */
